k8s/tls/stage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messenger-stage-ingress
  namespace: messenger-stage
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chat.focus.local
        - admin.focus.local
        - api.focus.local
        - swagger.focus.local
      secretName: focus-local-tls
  rules:
    - host: api.focus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-go
                port:
                  number: 80
    - host: chat.focus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: admin.focus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-admin
                port:
                  number: 80
    - host: swagger.focus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-go
                port:
                  number: 8081
